--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.App {
+/* .App {
   text-align: center;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +35,75 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#root {
+  flex: 1;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+  min-height: 100%;
+  max-width: 1440px;
+}
+
+.main-wrapper {
+  flex: 2;
+  padding-top: 40px;
+  padding-left: 140px;
+  padding-right: 140px;
+}
+.main-title {
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: bold;
+}
+
+.greeting-title {
+  margin-top: 70px;
+  margin-bottom: 15px;
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: bold;
+}
+
+.greeting-text {
+  font-size: 24px;
+  line-height: 44px;
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+
+#search-input {
+  padding: 0;
+}
+
+#search-input:after, #search-input:before {
+  display: none;
+  opacity: 0;
+}
+
+.btn-wrapper {
+  margin-top: 20px;
+}
+
+.favourites-wrapper {
+  flex: 1;
+  background-color: #F8F8F8;
+  padding: 40px;
+}
+
+.favourite-title {
+  color: #ABABAB;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 28px;
+}
+
+.error-message {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #f00;
 }
