--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 }
 
 .main-wrapper {
-  flex: 2;
+  flex: 1.5;
   padding-top: 40px;
   padding-left: 140px;
   padding-right: 140px;
@@ -99,6 +99,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 28px;
+  margin-bottom: 20px;
 }
 
 .error-message {
